--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li id="col_4" class="item">
                 <span class="experience-red">2015.10 - 2016.03 广州市气象局门户建设</span>
                 <span>负责站点80%的建设工作。
-用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块、实现了前台页面调用后台气象视频功能、用jquery实现了可拖拽排序根据个人习惯自定义显示的个性化站点（页面暂未分配域名可能无法访问）。</span>
+用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块、实现了前台页面调用后台气象视频功能、用jquery实现了可拖拽排序根据个人习惯自定义显示的个性化站点。</span>
             </li>
             <li id="col_5" class="item">
                 <span class="experience-yellow">2016.04 - 2016.06 广发基金主站改版</span>
