修改头部字体图标

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>贺京简历</title>
     <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/skill.css" />
     <link rel="stylesheet" href="styles/fonts.css" />
@@ -14,7 +15,15 @@
     <div class="public-container clearfloat">
         <div class="header-photo float-left"><a href="#"></a></div>
         <div class="header-mid float-left">
-            <p class="my-name">@贺京</p>
+            <p class="my-name">@贺京
+                <span class="ion-social-chrome-outline"></span>
+                <span class="ion-social-dribbble-outline"></span>
+                <span class="ion-social-html5-outline"></span>
+                <span class="ion-social-css3-outline"></span>
+                <span class="ion-social-javascript-outline"></span>
+                <span class="ion-social-angular-outline"></span>
+                <span class="ion-social-sass"></span>
+            </p>
             <p class="my-introduce">从不相信看见流星可以许愿，我只想脚踏实地的收集龙珠</p>
         </div>
         <div class="header-info float-right">
@@ -131,7 +140,14 @@
 </div>
 <div class="about">
     <div class="about-detail public-container">
-        <div class="about-webDesign float-right"></div>
+        <div class="about-webDesign float-right">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
         <div class="about-me">
             <h1>#关于我#</h1>
             <p>
