--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <p class="my-introduce">从不相信看见流星可以许愿，我只想脚踏实地的收集龙珠</p>
         </div>
         <div class="header-info float-right">
-            <p class="my-birth float-right">1991.09.05</p>
-            <p class="my-phone float-right">TEL：136-6016-7578</p>
+            <p class="my-birth ">1991.09.05</p>
+            <p class="my-phone ">TEL：136-6016-7578</p>
         </div>
     </div>
 </div>
@@ -126,12 +126,12 @@
                 <div class="content">
                     <div class="col">
                         <ul id="skill">
-                            <li><span class="expand html5"></span></li>
-                            <li><span class="expand css"></span></li>
-                            <li><span class="expand javascript"></span></li>
-                            <li><span class="expand jquery"></span></li>
-                            <li><span class="expand github"></span></li>
-                            <li><span class="expand photoshop"></span></li>
+                            <li><span title="80%" class="expand html"></span></li>
+                            <li><span title="70%" class="expand css"></span></li>
+                            <li><span title="60%" class="expand javascript"></span></li>
+                            <li><span title="60%" class="expand jquery"></span></li>
+                            <li><span title="70%" class="expand github"></span></li>
+                            <li><span title="70%" class="expand photoshop"></span></li>
                         </ul>
                     </div>
                 </div>
