一些修改及添加一些css3提示效果

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="styles/tooltips.css" />
     <link rel="stylesheet" href="styles/animate.css">
 </head>
 <body>
@@ -47,9 +48,15 @@
         <div class="experience-title">工作经历</div>
         <ul class="experience-item">
             <li class="first-li">
-                <span class="li-fir-span">2014</span><a href="#" class="experience-one"></a><a href="#" class="experience-two"></a>
-                <span class="li-sec-span">2015</span><a href="#" class="experience-three"></a><a href="#" class="experience-four"></a>
-                <span class="li-thi-span">2016</span><a href="#" class="experience-five"></a><a href="#" class="experience-six"></a>
+                <span class="li-fir-span">2014</span>
+                <a href="http://www.fsgas.com/" target="_blank" data-tooltips="毕业后的第一个项目。点击可访问" class="experience-one tooltips-top"></a>
+                <a href="http://www.gddrc.gov.cn/" target="_blank" data-tooltips="14年9月份的项目，当时驻点在发改委。点击可访问" class="experience-two tooltips-top"></a>
+                <span class="li-sec-span">2015</span>
+                <a href="http://www.jxzwfww.gov.cn/bmfw/" data-tooltips="当时出差到南昌江西省政府，没日没夜连续加班七天。点击可访问" target="_blank" class="experience-three tooltips-top"></a>
+                <a href="http://www.gdd.gov.cn/" data-tooltips="广州开发区政府门户网项目，当时驻点伙食还是不错。点击可访问" target="_blank" class="experience-four tooltips-top"></a>
+                <span class="li-thi-span">2016</span>
+                <a href="http://www.gz121.gov.cn/" data-tooltips="广州市气象局项目，气象局环境超级好，像个别墅。点击可以访问" target="_blank" class="experience-five tooltips-top"></a>
+                <a href="http://www.gffunds.com.cn/" data-tooltips="广发基金项目，学到了很多很多，到此决定辞职专注前端。点击可访问" target="_blank" class="experience-six tooltips-top"></a>
                 <span class="li-fou-span">2017</span>
             </li>
             <li id="col_0" class="item">
@@ -156,29 +163,9 @@
         <div class="about-me">
             <h1>#关于我#</h1>
             <p>
-                本人工作两年有余，通过学习和熟悉公司自有的产品后觉得靠公司的产品吃饭是不行的，如果离开了那我什么都不会了，于是明白我要学习的是真正适用、通用且实用的前端知识，利用这些知识来实现自己想要实现且喜欢的东西:可以是一些简单的jquery插件，也可以是一些简单的CSS样式库。热爱前端，喜欢用扎实的代码技术做出效果上最炫、代码上最合理的页面。熟悉html、css，能够兼容主流浏览器。熟悉jquery，能够编写最基本的动态交互效果。了解angularjs、bootstrap、react.js等框架。了解grunt、glup工程化工具。熟悉git、svn版本控制工具。熟悉chrome调试工作调试代码。希望找一份既能学习又能锻炼自己的webweb前端的工作，真正的web前端，就算是让我从基础的html、css开始写页面我都愿意，只要能让我学习并运用到更多的前端知识，并通过自己的双手写出立马能看到效果的web页面就好。虽然我仍有很多不懂的地方需要去学习或巩固，为此我会非常努力的学习，为了自己心目中真正想要实现的东西。
+                本人工作两年，通过学习和熟悉公司自有的产品后觉得靠公司的产品吃饭是不行的，如果离开了那我什么都不会了，于是明白我要学习的是真正适用、通用且实用的前端知识，利用这些知识来实现自己想要实现且喜欢的东西:可以是一些简单的jquery插件，也可以是一些简单的CSS样式库。热爱前端，喜欢用扎实的代码技术做出效果上最炫、代码上最合理的页面。熟悉html、css，能够兼容主流浏览器。熟悉jquery，能够编写最基本的动态交互效果。了解angularjs、bootstrap、react.js等框架。了解grunt、glup工程化工具。熟悉git、svn版本控制工具。熟悉chrome调试工作调试代码。希望找一份既能学习又能锻炼自己的webweb前端的工作，真正的web前端，就算是让我从基础的html、css开始写页面我都愿意，只要能让我学习并运用到更多的前端知识，并通过自己的双手写出立马能看到效果的web页面就好。虽然我仍有很多不懂的地方需要去学习或巩固，为此我会非常努力的学习，为了自己心目中真正想要实现的东西。
             </p>
         </div>
-        <!--<div class="about-contact">-->
-            <!--<ul>-->
-                <!--<li class="contact-item float-left">-->
-                    <!--<a class="contact-github" href="#"></a>-->
-                    <!--<span>微信微博</span>-->
-                <!--</li>-->
-                <!--<li class="contact-item float-left">-->
-                    <!--<a class="contact-weibo"  href="#"></a>-->
-                    <!--<span>微信微博</span>-->
-                <!--</li>-->
-                <!--<li class="contact-item float-left">-->
-                    <!--<a class="contact-phone" href="#"></a>-->
-                    <!--<span>微信微博</span>-->
-                <!--</li>-->
-                <!--<li class="contact-item float-left">-->
-                    <!--<a class="contact-email" href="#"></a>-->
-                    <!--<span>微信微博</span>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</div>-->
     </div>
 </div>
 <div class="footer"></div>
