新增学校提示信息

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <p class="graduation-info animated zoomIn">毕业于 西藏民族大学/全日制本科/计算机科学与技术（网络方向）</p>
             <p class="some-tips animated zoomIn">Tips：2014年毕业。学校不在西藏，在西安咸阳，生源为50%藏族、50%汉族。我会一点藏语，如果想去西藏旅游我可以安排同学保驾护航</p>
         </div>
-        <div class="university-logo float-right"><a title="西藏民族大学" target="_blank" href="http://baike.baidu.com/link?url=kOkjsMharUzK5vvzofLGTBQajDALG_eP4PoKnV4ZICQW_C3OxlEjjxFpkznuaQ3IZ9SKh5mh8TqFNiZNN0mx9Uwcb9tB5c2M8KDYQNEnSxk_MXf741KLjba_rmzKNfS14_TT-KOkUbr0DPRE-1eMwK"></a></div>
+        <div class="university-logo float-right">
+            <a class="tooltips-top" data-tooltips="(눈_눈)应该不会有人说我在帮学校打广告吧，不会玩真的举报我吧 (ง •̀_•́)ง┻━┻ " title="西藏民族大学,点击可访问" target="_blank" href="http://baike.baidu.com/link?url=kOkjsMharUzK5vvzofLGTBQajDALG_eP4PoKnV4ZICQW_C3OxlEjjxFpkznuaQ3IZ9SKh5mh8TqFNiZNN0mx9Uwcb9tB5c2M8KDYQNEnSxk_MXf741KLjba_rmzKNfS14_TT-KOkUbr0DPRE-1eMwK"></a>
+        </div>
     </div>
 </div>
 <div class="experience">
