--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <ul class="about-info">
                 <li><span class="ion-social-github"></span><a title="贺京的github" target="_blank" href="https://github.com/hajing">github.com/hajing</a></li>
                 <li><span class="ion-social-instagram"></span><a title="贺京的ins" target="_blank" href="https://www.instagram.com/hejinghemin/">instagram.com/hejinghemin</a></li>
-                <li><span class="ion-email-unread"></span><a href="mailto:abigail67@sina.com">abigail67@sina.com</a></li>
+                <li><span class="ion-email-unread"></span><a title="点击给我发送邮件" href="mailto:abigail67@sina.com">abigail67@sina.com</a></li>
                 <li><span class="ion-ios-briefcase"></span><a class="about-info-nolink">北京拓尔思信息技术股份有限公司广州分公司（8月份已离职）</a></li>
                 <li><span class="ion-ios-home"></span><a class="about-info-nolink">湖南株洲</a></li>
                 <li><span class="ion-ios-location"></span><a class="about-info-nolink">广东广州</a></li>
