--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     </div>
 </div>
 <div class="footer"></div>
+<div id="preload-01"></div>
 <script src="scripts/jquery.js"></script>
 <script src="scripts/addLoadEvent.js"></script>
 <script src="scripts/index.js"></script>
