添加项目节点提示

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 <div class="experience">
     <div class="experience-show public-container">
-        <div class="experience-title">工作经历</div>
+        <div class="experience-title">工作经历 <span id="tips">↓这些项目节点都是可以点击访问的</span></div>
         <ul class="experience-item">
             <li class="first-li">
                 <span class="li-fir-span">2014</span>
