按STAR法则修改简历

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/skill.css" />
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/slick.css" />
+    <link rel="stylesheet" href="styles/slick-theme.css" />
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="styles/tooltips.css" />
     <link rel="stylesheet" href="styles/animate.css">
@@ -51,47 +53,225 @@
         <ul class="experience-item">
             <li class="first-li">
                 <span class="li-fir-span">2014</span>
-                <a href="http://www.fsgas.com/" target="_blank" data-tooltips="毕业后的第一个项目，新手上路。点击可访问" class="experience-one tooltips-top"></a>
-                <a href="http://www.gddrc.gov.cn/" target="_blank" data-tooltips="14年9月份的项目，当时驻点在发改委。点击可访问" class="experience-two tooltips-top"></a>
+                <a href="http://www.fsgas.com/" target="_blank" data-tooltips="毕业后的第一个项目，新手上路。点击可访问" class="experience-one tooltips-top slick_dots"></a>
+                <a href="http://www.gddrc.gov.cn/" target="_blank" data-tooltips="14年9月份的项目，当时驻点在发改委。点击可访问" class="experience-two tooltips-top slick_dots"></a>
                 <span class="li-sec-span">2015</span>
-                <a href="http://www.jxzwfww.gov.cn/bmfw/" data-tooltips="当时出差到南昌江西省政府，没日没夜连续加班七天。点击可访问" target="_blank" class="experience-three tooltips-top"></a>
-                <a href="http://www.gdd.gov.cn/" data-tooltips="广州开发区政府门户网项目，当时驻点伙食还是不错。点击可访问" target="_blank" class="experience-four tooltips-top"></a>
+                <a href="http://www.jxzwfww.gov.cn/bmfw/" data-tooltips="当时出差到南昌江西省政府，没日没夜连续加班七天。点击可访问" target="_blank" class="experience-three tooltips-top slick_dots"></a>
+                <a href="http://www.gdd.gov.cn/" data-tooltips="广州开发区政府门户网项目，当时驻点伙食还是不错。点击可访问" target="_blank" class="experience-four tooltips-top slick_dots"></a>
                 <span class="li-thi-span">2016</span>
-                <a href="http://www.gz121.gov.cn/" data-tooltips="广州市气象局项目，气象局环境超级好，像个别墅。点击可访问" target="_blank" class="experience-five tooltips-top"></a>
-                <a href="http://www.gffunds.com.cn/" data-tooltips="广发基金项目，学到了很多很多，到此决定辞职专注前端。点击可访问" target="_blank" class="experience-six tooltips-top"></a>
+                <a href="http://www.gz121.gov.cn/" data-tooltips="广州市气象局项目，气象局环境超级好，像个别墅。点击可访问" target="_blank" class="experience-five tooltips-top slick_dots"></a>
+                <a href="http://www.gffunds.com.cn/" data-tooltips="广发基金项目，学到了很多很多，到此决定辞职专注前端。点击可访问" target="_blank" class="experience-six tooltips-top slick_dots"></a>
                 <span class="li-fou-span">2017</span>
             </li>
-            <li id="col_0" class="item">
-                <span class="experience-green">2014.08 - 2014.10 佛山市燃气集团官网建设</span>
-                <span>实施并搭建佛燃官网及佛燃各区官网。用基本的前端技术css、js和公司产品语音编写站点模板、用js处理已发布的文章的字体效果、按要求维护和修改web页面。</span>
-            </li>
-            <li id="col_1" class="item">
-                <span class="experience-yellow">2014.09 - 2015.03 广东省发改委门户网站改版</span>
-                <span>根据新的设计稿改版发改委旧站。用基本的js、css实现轮播和web页面效果、用公司产品语言编写模板、用插件实现无障碍阅读、按要求维护和修改web页面。</span>
-            </li>
-            <li id="col_2" class="item">
-                <span class="experience-blue">2015.04 - 2015.04 江西政务服务网建设</span>
-                <span>负责站点便民服务模块建设。负责便民服务模块功能、调用百度地图api实现场馆设施等查询、根据后台数据显示和遮盖前台页面相应模块、根据后台数据给前台页面进行五角星打分。</span>
-            </li>
-            <li id="col_3" class="item">
-                <span class="experience-purple">2015.06 - 2015.08 广州开发区、萝岗区政府门户网站建设</span>
-                <span>负责整站建设。用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、借用公司产品实现站内文档标题、内容检索、借用公司产品实现了信访信箱、问卷调查等功能、按要求维护和修改web页面。</span>
-            </li>
-            <li id="col_4" class="item">
-                <span class="experience-red">2015.10 - 2016.03 广州市气象局门户建设</span>
-                <span>负责站点80%的建设工作。
-用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块、实现了前台页面调用后台气象视频功能、用jquery实现了可拖拽排序根据个人习惯自定义显示的个性化站点。</span>
-            </li>
-            <li id="col_5" class="item">
-                <span class="experience-yellow">2016.04 - 2016.06 广发基金主站改版</span>
-                <span>负责广发基金主站改版50%的建设及完全负责广发客服子站改版。用基本的前端css、js、jquery实现页面效果，并结合公司产品语言编写主站和客服子站模板、调用基金接口实现基金推荐功能，展示基金、益等及购买状态等信息、用jquery统一格式化文章详情页字体大小格式、按要求维护和修改web页面。</span>
-            </li>
+            <!--<li id="col_0" class="item">-->
+                <!--<span >2014.08 - 2014.10 佛山市燃气集团官网建设</span>-->
+                <!--<span></span>-->
+            <!--</li>-->
+            <!--<li id="col_1" class="item">-->
+                <!--<span >2014.09 - 2015.03 广东省发改委门户网站改版</span>-->
+                <!--<span>根据新的设计稿改版发改委旧站。用基本的js、css实现轮播和web页面效果、用公司产品语言编写模板、用插件实现无障碍阅读、按要求维护和修改web页面。</span>-->
+            <!--</li>-->
+            <!--<li id="col_2" class="item">-->
+                <!--<span >2015.04 - 2015.04 江西政务服务网建设</span>-->
+                <!--<span>负责站点便民服务模块建设。负责便民服务模块功能、调用百度地图api实现场馆设施等查询、根据后台数据显示和遮盖前台页面相应模块、根据后台数据给前台页面进行五角星打分。</span>-->
+            <!--</li>-->
+            <!--<li id="col_3" class="item">-->
+                <!--<span >2015.06 - 2015.08 广州开发区、萝岗区政府门户网站建设</span>-->
+                <!--<span>负责整站建设。用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、借用公司产品实现站内文档标题、内容检索、借用公司产品实现了信访信箱、问卷调查等功能、按要求维护和修改web页面。</span>-->
+            <!--</li>-->
+            <!--<li id="col_4" class="item">-->
+                <!--<span >2015.10 - 2016.03 广州市气象局门户建设</span>-->
+                <!--<span>负责站点80%的建设工作。-->
+<!--用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块、实现了前台页面调用后台气象视频功能、用jquery实现了可拖拽排序根据个人习惯自定义显示的个性化站点。</span>-->
+            <!--</li>-->
+            <!--<li id="col_5" class="item">-->
+                <!--<span >2016.04 - 2016.06 广发基金主站改版</span>-->
+                <!--<span>负责广发基金主站改版50%的建设及完全负责广发客服子站改版。用基本的前端css、js、jquery实现页面效果，并结合公司产品语言编写主站和客服子站模板、调用基金接口实现基金推荐功能，展示基金、益等及购买状态等信息、用jquery统一格式化文章详情页字体大小格式、按要求维护和修改web页面。</span>-->
+            <!--</li>-->
         </ul>
+        <div class="test-class">
+            <div>
+                <h3 class="experience-green">2014.08 - 2014.10 佛山市燃气集团官网建设</h3>
+                <p>
+                    <p>Situation:</p>
+                    <p>
+                        ①毕业后的第一个项目，基本没有项目实战经验，在项目经理的带领下开始了我的第一个企业官网项目。
+                        ②当时佛山燃气需要建立一个对外宣传的官网，站点需要体现佛燃企业文化、燃气新闻和信息。
+                    </p>
+                    <p>Task/Target:</p>
+                    <p>
+                        ①需要将美工的设计稿用html和css、js实现，并部署到内网可供客户访问浏览点击。
+                        ②需要配合美工按客户要求调整设计稿，对于客户要求与美工设计稿相差不大的地方直接在页面进行修改处理。
+                        ③指导客户使用整套CMS系统，编写用户手册。
+                        ④上线后按要求维护和修改页面。
+                    </p>
+                    <p>Action:</p>
+                    <p>
+                        ①配合美工进行页面设计或者修改，积极将客户的要求及时反馈给美工。
+                        ②第一时间将美工的设计稿用html、css、js实现并部署到内网供客户浏览。
+                        ③通过学习和请教公司老员工学会了整套CMS系统的操作。
+                        ④根据佛上燃气的客户需求编写了CMS系统的用户手册。
+                    </p>
+                    <p>Result:</p>
+                    <p>
+                        ①最后佛燃官网顺利上线，页面设计都符合客户要求，客户对CMS系统使用正常。我的第一个项目顺利完成验收。
+                    </p>
+                </p>
+            </div>
+            <div>
+                <h3 class="experience-yellow">2014.09 - 2015.03 广东省发改委门户网站改版</h3>
+                <p>
+                <p>Situation:</p>
+                <p>
+                    ①因为我html、css基础比较好，于是在佛燃项目期间被借调到发改委官网旧站改版项目。
+                    ②发改委旧站部署的旧服务器空间基本满了，已将数据迁移，需设根据新的设计稿建站以展示迁移出的数据。
+                </p>
+                <p>Task/Target:</p>
+                <p>
+                    ①驻点发改委。
+                    ②用html、css、js实现美工的设计稿并部署到新服务器展示数据。
+                    ③配合美工按客户要求修改设计稿，在紧急情况下按客户要求调整页面。
+                    ④对服务器数据库进行整理，删除旧系统遗留不必要的数据。
+                    ⑤调整旧站的页面以及旧站页面的兼容性，上线后按要求维护和修改页面。
+                </p>
+                <p>Action:</p>
+                <p>
+                    ①第一时间将美工的设计稿用html、css、js实现并部署到新服务器。
+                    ②积极将客户的要求及时反馈给美工，配合美工进行页面设计或者修改，在不走公司美工修改设计稿流程的情况下按客户的要求修改页面。
+                    ③用基本的SQL语句对数据库旧数据进行删除整理。
+                    ④将旧站的table布局用div的方式进行替换，并解决一些兼容性问题。
+                </p>
+                <p>Result:</p>
+                <p>
+                    ①驻点发改委五个月，直接对接客户，学会了和客户交流的方式，学会了按权重来处理事情和任务。发改委项目顺利上线。
+                </p>
+                </p>
+            </div>
+            <div>
+                <h3 class="experience-blue">2015.04 - 2015.04 江西政务服务网建设</h3>
+                <p>
+                <p>Situation:</p>
+                <p>
+                    ①项目急于上线，客户看不到成果想投诉，项目经理决定带一队人前往江西省南昌市江西省政府直接参与工作。
+                    ②队伍一共七人，负责前端工作的有三个，其中一个是我。
+                </p>
+                <p>Task/Target:</p>
+                <p>
+                    ①参照浙江政务服务网便民服务模块实现相同功能。
+                    ②用html和css、js实现美工设计稿。
+                    ③实现地图查询功能、并提供附件公共设施、场馆设施信息，实现当前位置与目的地交通路线规划。
+                    ④根据接口数据在前台页面实现五角星打分。
+                    ⑤根据CMS系统后台数据情况处理前台页面。
+                </p>
+                <p>Action:</p>
+                <p>
+                    ①研究浙江政务服务网便民服务模块。
+                    ②做好前期准备，按需求实现美工设计稿。
+                    ③调用百度地图api实现地图功能，将坐标中心设置为省政府，以便查询范围准确。
+                    ④用$.ajax获取接口数据并根据相应的数值按比例换算成背景宽度以实现打分。
+                    ⑤后台有数据则前台显示，否则用色块加文字遮盖相应区域。
+                </p>
+                <p>Result:</p>
+                <p>
+                    ①经过七天没日没夜的加班工作，最终完成项目及时上线。七天的鏖战，身心俱疲，最后休息了三天。
+                </p>
+                </p>
+            </div>
+            <div>
+                <h3 class="experience-purple">2015.06 - 2015.08 广州开发区、萝岗区政府门户网站建设</h3>
+                <p>
+                <p>Situation:</p>
+                <p>
+                    ①整个项目就我一个人。
+                    ②时间为两个月，要在广州开发区正式挂牌之前完成。
+                </p>
+                <p>Task/Target:</p>
+                <p>
+                    ①完成整个站点的建设。
+                    ②用html和css、js实现美工设计稿。
+                    ③实现站内文档标题、内容检索。
+                    ④实现信访信箱、问卷调查等功能。
+                    ⑤实现前台发布的文章正文字体格式统一的功能。
+                    ⑥上线后按要求维护和修改页面。
+                </p>
+                <p>Action:</p>
+                <p>
+                    ①驻点萝岗区政府，按需求实现美工设计稿，积极将客户的要求及时反馈给美工。
+                    ②配合美工进行页面设计或者修改，在不走公司美工修改设计稿流程的情况下按客户的要求修改页面。
+                    ③配合公司产品对标题和正文字段进行检索以实现检索功能。
+                    ④配合公司产品用form表单实现信访信箱、问卷调查功能。
+                    ⑤用jquery获取文档的相应文章内容之后进行批量的样式修改。
+                </p>
+                <p>Result:</p>
+                <p>
+                    ①前期客户需求一直在变动，但每次都按客户的要求实现了，最后顺利上线，站点没有问题一切正常。
+                </p>
+                </p>
+            </div>
+            <div>
+                <h3 class="experience-red">2015.10 - 2016.03 广州市气象局门户建设</h3>
+                <p>
+                <p>Situation:</p>
+                <p>
+                    ①因为是气象官网，所以展示的数据比较多，部分调用接口，部分直接嵌套。
+                    ②项目组一共两个人，驻点气象局。
+                </p>
+                <p>Task/Target:</p>
+                <p>
+                    ①完成市气象局站点80%的功能，完全负责八个区县气象局的八个站点的建设。
+                    ②用html和css、js实现美工设计稿。
+                    ③根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块。
+                    ④实现可拖拽排序按个人习惯自定义显示的个性化站点。
+                    ⑤上线后按要求维护和修改页面。
+                </p>
+                <p>Action:</p>
+                <p>
+                    ①按需求实现美工设计稿，积极将客户的要求及时反馈给美工。
+                    ②在不走公司美工修改设计稿流程的情况下按客户的要求修改页面。
+                    ③用$.ajax获取气象接口数据，并通过选择器渲染数据到前台页面。
+                    ④用jquery插件实现可自由拖拽摆放的页面显示模块。
+                </p>
+                <p>Result:</p>
+                <p>
+                    ①站点顺利上线，各气象信息显示正常，各区县站点正常。后因接口数据格式调整，同事接手维护。
+                </p>
+                </p>
+            </div>
+            <div>
+                <h3 class="experience-yellow">2016.04 - 2016.06 广发基金主站改版</h3>
+                <p>
+                <p>Situation:</p>
+                <p>
+                    ①广发基金80%的数据来源于接口。
+                    ②用gitlab协同开发和代码管理，最后合并分支并推到正式环境。
+                </p>
+                <p>Task/Target:</p>
+                <p>
+                    ①负责广发基金主站40%的功能，完全负责客服子站建设。
+                    ②用html和css、js实现美工设计稿。
+                    ③调用基金接口获取数据实现基金推荐功能，并展示基金收益情况和购买状态等信息。
+                    ④实现前台发布的文章页面字体格式统一的功能。
+                    ⑤上线后按要求维护和修改页面。
+                </p>
+                <p>Action:</p>
+                <p>
+                    ①按需求实现美工设计稿，及时处理gitlab上指派给我的任务和问题。
+                    ②用Promise.resolve和$.ajax方法获取基金接口数据并绘制table表格在前台页面渲染显示基金收益情况等信息，如基金不能购买则置灰购买按钮。
+                    ③用jquery获取文档的相应文章内容之后进行批量的样式修改。
+                    ④配合公司产品对客服子站的问题进行检索。
+                </p>
+                <p>Result:</p>
+                <p>
+                    ①站点顺利上线。在广发基金项目中我学到了很多很多，对前端大牛更是佩服，知道了自己的不足，还需要努力。
+                </p>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 <div class="skill">
     <div class="skill-show public-container">
-        <div class="skill-books float-left">
+        <div class="skill-books float-right">
             <div class="skill-left-title">阅读书籍</div>
             <div class="books-name float-left">
                 <ol id="linklist">
@@ -119,7 +299,7 @@
                 </ol>
             </div>
         </div>
-        <div class="skill-detail float-right">
+        <div class="skill-detail float-left">
             <div class="skill-right-title">技术技能</div>
             <div class="skill-name float-left">
                 <ul class="skill-list">
@@ -172,6 +352,7 @@
 </div>
 <div class="footer"></div>
 <script src="scripts/jquery.js"></script>
+<script src="scripts/slick.min.js"></script>
 <script src="scripts/addLoadEvent.js"></script>
 <script src="scripts/index.js"></script>
 <script src="scripts/insertAfter.js"></script>
