添加求职信息

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="my-introduce">从不相信看见流星可以许愿，我只想脚踏实地的收集龙珠</p>
         </div>
         <div class="header-info float-right">
-            <p class="my-birth ">1991.09.05</p>
+            <p class="my-birth ">求职：web前端</p>
             <p class="my-phone ">TEL：136-6016-7578</p>
         </div>
     </div>
