修改项目经历描述

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/skill.css" />
     <link rel="stylesheet" href="styles/fonts.css" />
-    <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/slick.css" />
     <link rel="stylesheet" href="styles/slick-theme.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="styles/tooltips.css" />
     <link rel="stylesheet" href="styles/animate.css">
@@ -63,31 +63,6 @@
                 <a href="http://www.gffunds.com.cn/" data-tooltips="广发基金项目，学到了很多很多，到此决定辞职专注前端。点击可访问" target="_blank" class="experience-six tooltips-top slick_dots"></a>
                 <span class="li-fou-span">2017</span>
             </li>
-            <!--<li id="col_0" class="item">-->
-                <!--<span >2014.08 - 2014.10 佛山市燃气集团官网建设</span>-->
-                <!--<span></span>-->
-            <!--</li>-->
-            <!--<li id="col_1" class="item">-->
-                <!--<span >2014.09 - 2015.03 广东省发改委门户网站改版</span>-->
-                <!--<span>根据新的设计稿改版发改委旧站。用基本的js、css实现轮播和web页面效果、用公司产品语言编写模板、用插件实现无障碍阅读、按要求维护和修改web页面。</span>-->
-            <!--</li>-->
-            <!--<li id="col_2" class="item">-->
-                <!--<span >2015.04 - 2015.04 江西政务服务网建设</span>-->
-                <!--<span>负责站点便民服务模块建设。负责便民服务模块功能、调用百度地图api实现场馆设施等查询、根据后台数据显示和遮盖前台页面相应模块、根据后台数据给前台页面进行五角星打分。</span>-->
-            <!--</li>-->
-            <!--<li id="col_3" class="item">-->
-                <!--<span >2015.06 - 2015.08 广州开发区、萝岗区政府门户网站建设</span>-->
-                <!--<span>负责整站建设。用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、借用公司产品实现站内文档标题、内容检索、借用公司产品实现了信访信箱、问卷调查等功能、按要求维护和修改web页面。</span>-->
-            <!--</li>-->
-            <!--<li id="col_4" class="item">-->
-                <!--<span >2015.10 - 2016.03 广州市气象局门户建设</span>-->
-                <!--<span>负责站点80%的建设工作。-->
-<!--用基本的前端css、js实现页面效果，并结合公司产品语言编写模板、根据气象接口数据实时将气象信息显示在“今日天气”、“灾害预警”、“应急响应”模块、实现了前台页面调用后台气象视频功能、用jquery实现了可拖拽排序根据个人习惯自定义显示的个性化站点。</span>-->
-            <!--</li>-->
-            <!--<li id="col_5" class="item">-->
-                <!--<span >2016.04 - 2016.06 广发基金主站改版</span>-->
-                <!--<span>负责广发基金主站改版50%的建设及完全负责广发客服子站改版。用基本的前端css、js、jquery实现页面效果，并结合公司产品语言编写主站和客服子站模板、调用基金接口实现基金推荐功能，展示基金、益等及购买状态等信息、用jquery统一格式化文章详情页字体大小格式、按要求维护和修改web页面。</span>-->
-            <!--</li>-->
         </ul>
         <div class="test-class">
             <div>
@@ -110,7 +85,7 @@
                         ①配合美工进行页面设计或者修改，积极将客户的要求及时反馈给美工。
                         ②第一时间将美工的设计稿用html、css、js实现并部署到内网供客户浏览。
                         ③通过学习和请教公司老员工学会了整套CMS系统的操作。
-                        ④根据佛上燃气的客户需求编写了CMS系统的用户手册。
+                        ④根据佛山燃气的客户需求编写了CMS系统的用户手册。
                     </p>
                     <p>Result:</p>
                     <p>
@@ -143,7 +118,7 @@
                 </p>
                 <p>Result:</p>
                 <p>
-                    ①驻点发改委五个月，直接对接客户，学会了和客户交流的方式，学会了按权重来处理事情和任务。发改委项目顺利上线。
+                    ①开始接触页面兼容性问题。学会了和客户交流的方式，学会了按权重来处理事情和任务。发改委项目顺利上线。
                 </p>
                 </p>
             </div>
@@ -173,7 +148,7 @@
                 </p>
                 <p>Result:</p>
                 <p>
-                    ①经过七天没日没夜的加班工作，最终完成项目及时上线。七天的鏖战，身心俱疲，最后休息了三天。
+                    ①开始使用$.ajax方法调用数据接口。经过七天没日没夜的加班工作，最终完成项目及时上线。
                 </p>
                 </p>
             </div>
