增加移动端页面

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <p>Task/Target:</p>
                     <p>
                         ①需要将美工的设计稿用html和css、js实现，并部署到内网可供客户访问浏览点击。
-                        ②需要配合美工按客户要求调整设计稿，对于客户要求与美工设计稿相差不大的地方直接在页面进行修改处理。
+                        ②需要配合美工按客户要求调整设计稿，按客户要求修改页面。
                         ③指导客户使用整套CMS系统，编写用户手册。
                         ④上线后按要求维护和修改页面。
                     </p>
@@ -105,14 +105,14 @@
                 <p>
                     ①驻点发改委。
                     ②用html、css、js实现美工的设计稿并部署到新服务器展示数据。
-                    ③配合美工按客户要求修改设计稿，在紧急情况下按客户要求调整页面。
+                    ③配合美工按客户要求修改设计稿，按客户要求调整页面。
                     ④对服务器数据库进行整理，删除旧系统遗留不必要的数据。
-                    ⑤调整旧站的页面以及旧站页面的兼容性，上线后按要求维护和修改页面。
+                    ⑤调整旧站的页面以及旧站页面的兼容性。
                 </p>
                 <p>Action:</p>
                 <p>
                     ①第一时间将美工的设计稿用html、css、js实现并部署到新服务器。
-                    ②积极将客户的要求及时反馈给美工，配合美工进行页面设计或者修改，在不走公司美工修改设计稿流程的情况下按客户的要求修改页面。
+                    ②积极将客户的要求及时反馈给美工，按客户的要求修改页面。
                     ③用基本的SQL语句对数据库旧数据进行删除整理。
                     ④将旧站的table布局用div的方式进行替换，并解决一些兼容性问题。
                 </p>
@@ -136,7 +136,6 @@
                     ②用html和css、js实现美工设计稿。
                     ③实现地图查询功能、并提供附件公共设施、场馆设施信息，实现当前位置与目的地交通路线规划。
                     ④根据接口数据在前台页面实现五角星打分。
-                    ⑤根据CMS系统后台数据情况处理前台页面。
                 </p>
                 <p>Action:</p>
                 <p>
@@ -144,7 +143,6 @@
                     ②做好前期准备，按需求实现美工设计稿。
                     ③调用百度地图api实现地图功能，将坐标中心设置为省政府，以便查询范围准确。
                     ④用$.ajax获取接口数据并根据相应的数值按比例换算成背景宽度以实现打分。
-                    ⑤后台有数据则前台显示，否则用色块加文字遮盖相应区域。
                 </p>
                 <p>Result:</p>
                 <p>
