--- a/index.html
+++ b/index.html
@@ -332,5 +332,23 @@
 <script src="scripts/moveElement.js"></script>
 <script src="scripts/prepareSlideshow.js"></script>
 <script src="scripts/fun_dog.js"></script>
+<script type="text/javascript">
+    if(window.location.toString().indexOf('pref=padindex') != -1){
+    }else{
+        if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){
+            if(window.location.href.indexOf("?mobile")<0){
+                try{
+                    if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){
+                        window.location.href="mobile.html";
+                    }else if(/iPad/i.test(navigator.userAgent)){
+                        window.location.href="mobile.html"
+                    }else{
+                        window.location.href="mobile.html"
+                    }
+                }catch(e){}
+            }
+        }
+    }
+</script>
 </body>
 </html>
