--- a/mobile.html
+++ b/mobile.html
@@ -10,21 +10,18 @@
     <link rel="stylesheet" href="styles/PageSlider.css"/>
     <!--custom style-->
     <style>
-        .current .title{
-            -webkit-animation: slideToTop .8s ease both;
-        }
-
-        .current .subtitle{
-            -webkit-animation: slideToTop .8s 0.3s ease both;
-        }
     </style>
 </head>
 <body>
 <div class="page-wrap">
     <div class="page">
-        <div class="title">page one</div>
-        <div class="subtitle">page one subtitle</div>
-
+        <div class="mypic"><img src="images/hejing.png"></div>
+        <div class="title">贺京</div>
+        <div class="subtitle">从不相信看见流星可以许愿，我只想脚踏实地的收集龙珠</div>
+        <div class="content">
+            #关于我#<br>
+            本人工作两年，通过学习和熟悉公司自有的产品后觉得靠公司的产品吃饭是不行的，如果离开了那我什么都不会了，于是明白我要学习的是真正适用、通用且实用的前端知识，利用这些知识来实现自己想要实现且喜欢的东西:可以是一些简单的jquery插件，也可以是一些简单的CSS样式库。热爱前端，喜欢用扎实的代码技术做出效果上最炫、代码上最合理的页面。熟悉html、css，能够兼容主流浏览器。熟悉jquery，能够编写最基本的动态交互效果。了解angularjs、bootstrap、react.js等框架。了解grunt、glup工程化工具。熟悉git、svn版本控制工具。熟悉chrome调试工作调试代码。希望找一份既能学习又能锻炼自己的web前端的工作，真正的web前端，就算是让我从基础的html、css开始写页面我都愿意，只要能让我学习并运用到更多的前端知识，并通过自己的双手写出立马能看到效果的web页面就好。虽然我仍有很多不懂的地方需要去学习或巩固，为此我会为之而努力，为了自己心目中真正想要实现的东西。
+        </div>
         <div class="arrow-h"><i></i></div>
     </div>
 
