--- a/mobile.html
+++ b/mobile.html
@@ -26,20 +26,24 @@
     </div>
 
     <div class="page">
-        <div class="title">page two</div>
-        <div class="subtitle">page two subtitle</div>
-
+        <div class="title">一些个人作品</div>
+        <div class="subtitle">全部放在github</div>
+        <div class="content">
+            我真的热爱前端，对前端也非常感兴趣。可能我的工作经验不够，但是我学习和接受能力很强，给我一点点时间我就能够完成任务实现你想要的效果。
+            <br>
+            个人线上简历：hajing.github.io/hejing-resume/
+            <br>
+            个人博客：www.hejinghemin.me
+            <br>
+            线上结婚请帖（16年底结的婚，做了个线上请帖，才不像拍婚纱照那些影楼帮忙做的妖艳的请帖呢）：hajing.github.io/wedding/
+            <br>
+            宝宝个人站（帮宝宝搭了个个人博客，域名也是用的宝宝的名字拼音，用来记录宝宝的成长）：www.heziyao.cn
+            <br>
+            Github：github.com/hajing
+            <br>
+            Instagram：www.instagram.com/hejinghemin
+        </div>
         <div class="arrow-h"><i></i></div>
-    </div>
-    <div class="page">
-        <div class="title">page three</div>
-        <div class="subtitle">page three subtitle</div>
-
-        <div class="arrow-h"><i></i></div>
-    </div>
-    <div class="page">
-        <div class="title">page four</div>
-        <div class="subtitle">page four subtitle</div>
     </div>
 </div>
 
