--- a/mobile.html
+++ b/mobile.html
@@ -52,7 +52,8 @@
 <script>
     new PageSlider({
         pages: $('.page-wrap .page'),
-        direction: 'h' //horizontal or h
+        direction: 'h', //horizontal or h
+        gestureFollowing: 'false'
     });
 
 </script>
