--- a/mobile.html
+++ b/mobile.html
@@ -51,11 +51,9 @@
 <script>
     new PageSlider({
         pages: $('.page-wrap .page'),
-        direction: 'h', //horizontal or h
-        preventDefault: true,
+        direction: 'h',
         animationPlayOnce: true
     });
-
 </script>
 </body>
 </html>
