--- a/mobile.html
+++ b/mobile.html
@@ -52,7 +52,7 @@
     new PageSlider({
         pages: $('.page-wrap .page'),
         direction: 'h',
-        animationPlayOnce: true
+//        animationPlayOnce: true
     });
 </script>
 </body>
